// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders corretly 1`] = `
Array [
  <h3
    className="Heading-o0b9ch-1 elMfkV"
  >
    Artist – Album (date)
  </h3>,
  <ul
    className="Container-o0b9ch-0 pyulI"
  >
    <li
      className="Album-o0b9ch-2 fdMfKQ"
    >
      Deafheaven – Ordinary Corrupt Human Love (13.7.2018)
    </li>
    <li
      className="Album-o0b9ch-2 diIUsR"
    >
      Urfaust – Constellatory Practice
    </li>
  </ul>,
]
`;

exports[`Renders corretly if value doesn't match 1`] = `
Array [
  <h3
    className="Heading-o0b9ch-1 elMfkV"
  >
    Artist – Album (date)
  </h3>,
  <ul
    className="Container-o0b9ch-0 pyulI"
  />,
]
`;
